# par-c

./: README.md
parsort/: CMakeLists.txt  Makefile  columnSort.h  driverColumnSort.c  seqColumnSort.c  threadColumnSort.c
sum/: CMakeLists.txt  seqSum.c  threadSum.c
